SERVER-47826 Respect when internalQueryEnumerationMaxOrSolutions is set to zero